# playground.hexagonal.arch

./: README.md  pyproject.toml  setup.cfg
src/: app.py
src/instances/: bootstrap.py
src/instances/application/: iinstance_service.py  instance_service.py
src/instances/domain/dto/: instance_dto.py
src/instances/domain/models/: instance.py  status.py
src/instances/domain/repository/: iinstance_repository.py
src/instances/entrypoints/api/: instance_controller.py
src/instances/infrastructure/: instance_repository.py
