[tool.poetry]
name = "playground-hexagonal-arch"
version = "0.1.0"
description = "Example of Hexagonal Archtecture in Python"
authors = ["Henrique André Felipe da Costa <hafc-dev@outlook.com>"]
readme = "README.md"
packages = [{include = "playground"}]

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
flake8 = "^6.1.0"
kink = "^0.6.6"
fastapi = "^0.103.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
